<resources>
    <string name="app_name">Zic Activate</string>
    <string name="action_exit">Exit</string>
    <string name="title_key">Keys</string>
    <string name="hint_key">Key</string>
    <string name="btn_activate">Activate</string>
    <string name="title_activate">Activate</string>
    <string name="btn_get_key">Get Key From Clipboard</string>
    <string name="toast_invalid">Invalid!</string>
    <string name="hint_note">Note</string>
    <string name="toast_empty_list">Empty!</string>
    <string name="tv_empty">Empty</string>
    <string name="toast_err_internet">Error! Please check your internet connection.</string>
    <string name="toast_not_allowed">Not allowed!</string>
    <string name="toast_error">Error!</string>
    <string name="toast_activated">Activated!</string>
    <string name="til_err_pipe">This filed must not contain a pipe (|)</string>
    <string name="til_err_empty_key">Key cannot be empty!</string>
    <string name="btn_edit">Edit</string>
    <string name="toast_deleted">Deleted!</string>
    <string name="toast_edited">Edited!</string>
    <string name="dialog_content_sure">Are you sure?</string>
    <string name="dialog_content_working">Working...</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="toast_existed">Already existed!</string>
    <string name="toast_error_data">Data error!</string>
    <string name="action_notes">Notes</string>
    <string name="btn_backup">Backup</string>
    <string name="toast_perm_denied">Permissions denied!</string>
    <string name="denied_message">![CDATA[If you reject permission, you can not use this function. Please turn on permissions at [Setting] > [Permission]]]</string>
    <string name="btn_go_settings">Go Settings</string>
    <string name="toast_error_writable">Error! Your storage is not writable, please check!</string>
    <string name="btn_restore">Restore</string>
    <string name="toast_restored">Restore completed!</string>
    <string name="toast_backedup">Backup completed!</string>
    <string name="toast_spam">Spam detected!</string>
</resources>
