<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16sp">

    <Button
        android:textColor="@color/colorAccent"
        android:id="@+id/btn_get_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_get_key"
        android:textSize="20sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_key_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="none"
            android:hint="@string/hint_key"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="16sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="none"
            android:hint="@string/hint_note"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="16sp" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:textColor="@color/colorAccent"
        android:id="@+id/btn_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_edit"
        android:textSize="24sp" />

</LinearLayout>