<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp"
        android:orientation="vertical"
        android:padding="16sp">

        <Button
            android:id="@+id/btn_get_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/btn_get_key"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_key_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="none"
                android:hint="@string/hint_key"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="none"
                android:hint="@string/hint_note"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_activate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40sp"
            android:text="@string/btn_activate"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />

    </LinearLayout>
</ScrollView>